--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.9"
   }
 }
