--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.9"
+    "mongoose": "^5.7.9",
+    "query-string": "^6.9.0"
   }
 }
